                                                         -*- coding: utf-8 -*-
Changes with Apache Traffic Server 3.1.2
  *) [TS-1040] Teach TSHostLookup to use const. Author: James Peach.

  *) [TS-1071] Debug statement in FetchSM broken. Author: Brian Geffon.

  *) [TS-1057] Expose Base64-encoding through APIs.
   Author: Yakov Kopel and leif

  *) [TS-1014] slow log can not print logs well on 32-bit system,
  changed the %d to RPI64. Author: weijin.

  *) [TS-992] Various portability fixes. Author: Piotr Sikora

  *) [TS-999] Deprecate TSUrlDestroy(), it's a no-op. Just make sure
   to release the marshal buffers as normal.

  *) [TS-245] Add TSStringPercentEncode(), TSUrlPercentEncode(), and
   TSStringPercentDecode().

  *) [TS-1065] traffic_cop segment fault when enable TRACE_LOG_COP.
   Author: Conan Wang.

  *) [TS-1029] DNS crash if we free the memory into system. Author: weijin

  *) [TS-1055] Wrong implementation of TSHttpSsnArgGet().
   Author: Yakov Kopel

  *) [TS-992] Portability fixes. Author: Piotr Sikora.

  *) [TS-949] Fix key->vol hash to be consistent when a disk is marked bad.

  *) [TS-1047] fix lots of spelling mistakes Author: Arno Töll

  *) [TS-1042] correct debug message in FetchSM. Author: James Peach

  *) [TS-1039] use pcre-config to find libpcre. Author: James Peach

  *) [TS-1037] Fix for computing local machine address (was ignoring
   general addresses).

  *) [TS-1030] Improve hashing mechanism on WKS.

  *) [TS-1028] Avoid triggering assert when running debug build and enabling
   per-thread connection pols

  *) [TS-1021] Remove extra newline from binary logs.

  *) [TS-1022] Use size specific types for serialized data in binary logs.

Changes with Apache Traffic Server 3.1.1
  *) [TS-1020] Make logging to a named pipe work on Solaris.

  *) [TS-1016] Make the update frequency for stats configurable.

  *) [TS-944] Align all configurations of paths to use the same function
